Perfiles - Bug video - Textos en ingles
Se agrego las imagenes y redes sociales de los perfiles, se arreglo un
bug con el video responsive y se colocaron los textos en ingles de
servicios y nosotros

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
   <link rel="stylesheet" href="css/materialize.css">
 </head>
 <body>
-<h1>Empezemos css -  color</h1>
-<div class="card-panel brown darken-4"><span class="blue-text text-darken-4">Card panel</span></div>
+<h1>Empezamos con la grilla</h1>
+<div class="container">
+	<div class="row">
+		<div class="col s4 ">menu</div>
+		<div class="col s4 ">menu</div>
+		<div class="col s4 ">menu</div>
+		
+		
+
+		
+	</div>
+	
+</div>
+
   
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
