Clase 4 - Css : Helpers
Clase 4

--- a/index.html
+++ b/index.html
@@ -5,53 +5,14 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Nuestro proyecto materialize</title>
   <link rel="stylesheet" href="css/materialize.css">
-</head>
+  
+ </head>
 <body>
-<h1>Empezamos con la grilla</h1>
+<h1>Media</h1>
 <div class="container">
-	<div class="row">
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-		<div class="col s1">hola</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col s2">hola</div>
-		<div class="col s2">hola</div>
-		<div class="col s2">hola</div>
-		<div class="col s2">hola</div>
-		<div class="col s2">hola</div>
-		<div class="col s2">hola</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col s3">hola</div>
-		<div class="col s3">hola</div>
-		<div class="col s3">hola</div>
-		<div class="col s3">hola</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col s6 m3">@yavallejo</div>
-		<div class="col s6 m3">@yavallejo</div>
-		<div class="col s6 m3">@yavallejo</div>
-		<div class="col s6 m3">@yavallejo</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col s2 offset-s5">Desplazamiento</div>
-		
-	</div>
+	
 </div>
+
 
 
 
