--- a/sombras.html
+++ b/sombras.html
@@ -3,13 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Tablas</title>
+  <title>Sombras</title>
   <link rel="stylesheet" href="css/materialize.css">
 </head>
 <body>
 <h1></h1>
 <div class="container">
 	<div class="row">
+		<div class="col s2 ble">
+			<p class="z-depth-1 blue-grey">z-depth-1</p>
+		</div>
+		<div class="col s2 ble">
+			<p class="z-depth-2 blue-grey">z-depth-2</p>
+		</div>
+		<div class="col s2 ble">
+			<p class="z-depth-3 blue-grey">z-depth-3</p>
+		</div>
+		<div class="col s3 ble">
+			<p class="z-depth-4 blue-grey">z-depth-4</p>
+		</div>
+		<div class="col s3 ble">
+			<p class="z-depth-5 blue-grey">z-depth-5</p>
+		</div>
 	</div>
 </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
