Clase 10 - Componentes - Collections
Clase 10 - Componentes - Collections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Iconos</title>
+  <title>Clase 11 - Badges</title>
   <link rel="stylesheet" href="css/materialize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -12,17 +12,8 @@
 <h1></h1>
 <div class="container">
 	<div class="row">
-		<!-- Tamaños
-		Rem (Root em)
-		tiny : 1 Rem
-		small: 2 Rem
-		Medium : 4 Rem
-		Large : 6 Rem -->
-			<i class="tiny mdi-device-bluetooth"></i>
-			<i class="small mdi-device-usb"></i>
-			<i class="medium mdi-device-storage"></i>
-			<i class="large mdi-device-devices"></i>
-	 </div>
+
+	</div>
 </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
