Clase 11 - Componentes - Badges

--- a/badges.html
+++ b/badges.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Clase 12</title>
+  <title>Clase 11 - Badges</title>
   <link rel="stylesheet" href="css/materialize.css">
 
 
@@ -12,8 +12,13 @@
 <h1></h1>
 <div class="container">
 	<div class="row">
-	<h1>Clase 12</h1>
-
+	<h1>Clase 11 - Badges</h1>
+	<ul class="collection">
+		<a href="" class="collection-item">Yar Arlex Vallejo<span class="new badge">1</span></a>
+		<a href="" class="collection-item">Yar Arlex Vallejo<span class="badge">1</span></a>
+		<a href="" class="collection-item">Yar Arlex Vallejo<span class="badge">1</span></a>
+		<a href="" class="collection-item">Yar Arlex Vallejo<span class="badge">1</span></a>
+	</ul>
 
 	</div>
 </div>
