--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Clase 12</title>
+  <title>Clase 12 - Botones</title>
   <link rel="stylesheet" href="css/materialize.css">
 
 
 </head>
 <body>
-<h1></h1>
 <div class="container">
-	<div class="row">
-	<h1>Clase 12</h1>
-
-
-	</div>
+	<div class="row"></div>
 </div>
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
 </body>
