--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Clase 12 - Botones</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+  <title>Clase 14 - Preloader</title>
   <link rel="stylesheet" href="css/materialize.css">
 
 
 </head>
 <body>
 <div class="container">
-	<div class="row"></div>
+	<div class="row">
+
+	</div>
 </div>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
