--- a/index.html
+++ b/index.html
@@ -3,80 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-  <title>Clase 14 - Cards</title>
+  <title>Clase 18 - Collapsible (Elementos de acordeon)</title>
   <link rel="stylesheet" href="css/materialize.css">
 </head>
 <body>
-	<div class="container">
-		<h2>Tarjeta básica</h2>
-		<div class="row">
-			<div class="col s12 m6">
-				<div class="card blue-grey darken-3">
-					<div class="card-content white-text">
-						<span class="card-title">titulo de la tarjeta</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, labore!</p>
-					</div>
-					<div class="card-action">
-						<a href="#">Link 1</a>
-						<a href="#">Link 2</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<h2>Tarjeta con imagen</h2>
-		<div class="row">
-			<div class="col s12 m6">
-				<div class="card ">
-				    <div class="card-image">
-						<img src="http://fakeimg.pl/439x251/00CED1/FFF/?text=@yavallejo">
-						<span class="card-title">
-							Yan Arlex Vallejo
-						</span>
-				    </div>
-					<div class="card-content">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, labore!</p>
-					</div>
-					<div class="card-action">
-						<a href="#">Link 1</a>
-						<a href="#">Link 2</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<h2>Tarjeta Reveal</h2>
-		<div class="row">
-			<div class="col s12 m6">
-				<div class="card ">
-					<div class="card-image waves-effect waves-block waves-orange">
-						<img class="activator" src="http://fakeimg.pl/439x251/01DF01/FFF/?text=aprendiendoando">
-					</div>
-					<div class="card-content">
-						<span class="card-title activator grey-text text-darken-4">
-							Titulo de la tarjeta
-							<i class="mdi-navigation-more-vert right"></i>
-						</span>
-					</div>
-					<div class="card-reveal">
-						<span class="card-title grey-text text-darken-4 ">
-							Titulo de la tarjeta
-							<i class="mdi-navigation-close right"></i>
-						</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum veritatis autem amet quo, necessitatibus praesentium sapiente pariatur quam voluptatum cumque itaque numquam impedit quas maiores mollitia odit hic provident ex.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<h2>Tamaños de las tarjetas</h2>
-
-		<span>Small: limitacion de altura de la tarjeta a 300px</span>
-		<span>Medium: limitacion de altura de la tarjeta a 400px</span>
-		<span>Large: limitacion de altura de la tarjeta a 500px</span>
-
-
-
+<div class="container">
+	<div class="row">
 	</div>
+</div>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
+
+
+
+   <script type="text/javascript" src="js/jquery.js"></script>
+   <script src="js/materialize.js"></script>
+
 </body>
 </html>
