--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
   <title>Clase 20 - Waves</title>
   <link rel="stylesheet" href="css/materialize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="container">
-	
+     <h4>Waves</h4>
+     <a href="#" class="btn-large waves-effect waves-miverde">Boton principal</a>
+       <hr>
+         
+     <a href="" class="waves-effect waves-circle waves-miverde btn-floating">
+       <i class="mdi-content-add"></i>
+     </a>
 </div>
 
  <script type="text/javascript" src="js/jquery.js"></script>
