--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-  <title>Clase 21 - Waves</title>
+  <title>Clase 22 - </title>
   <link rel="stylesheet" href="css/materialize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="container">
-    
-</div>
+
+
 
  <script type="text/javascript" src="js/jquery.js"></script>
  <script src="js/materialize.js"></script>
+
   </body>
 </html>
